:art: error messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="preco_revista"><b>Preço:</b> R$ %1$.2f</string>
     <string name="carregando_informacoes">Carregando Informações</string>
     <string name="erro_comic">HQs confiscadas pela S.H.I.E.L.D.</string>
+    <string name="atualizar">Atualizar</string>
 
 </resources>
